--- a/projects.json
+++ b/projects.json
@@ -55,7 +55,7 @@
         "card": true,
         "title": "Motherlode Tycoon",
         "language": "Verse",
-        "engine": "Unreal for Fortnite",
+        "engine": "UEFN",
         "role": "Verse Programmer",
         "duration": "2m",
         "datetime": "2025",
